<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/title"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/movie_detail_title"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/movie1_name"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:maxWidth="200dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <ImageView
            android:id="@+id/movie_detail_poster"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="16dp"
            android:layout_gravity="center"
            android:contentDescription="@string/movie_image_content_description"
            app:srcCompat="@drawable/place_holder"

            app:layout_constraintTop_toBottomOf="@id/movie_detail_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/movie_detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:text="@string/loading"

            app:layout_constraintTop_toBottomOf="@id/movie_detail_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/runtime"

            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/movie_detail_runtime"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/movie_detail_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/loading"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@id/movie_detail_overview"
            app:layout_constraintStart_toEndOf="@id/runtime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:text="@string/genres"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@id/runtime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/movie_detail_genres"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/movie_detail_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:text="@string/loading"
            android:maxWidth="200dp"

            app:layout_constraintTop_toBottomOf="@id/movie_detail_runtime"
            app:layout_constraintStart_toEndOf="@id/genres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <ProgressBar
            android:id="@+id/poster_progress_bar"
            android:layout_width="92dp"
            android:layout_height="92dp"

            app:layout_constraintTop_toTopOf="@id/movie_detail_poster"
            app:layout_constraintStart_toStartOf="@id/movie_detail_poster"
            app:layout_constraintEnd_toEndOf="@id/movie_detail_poster"
            app:layout_constraintBottom_toBottomOf="@id/movie_detail_poster"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>